[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
tl-compiler = { path = "crates/tl-compiler" }
tl-diagnostic = { path = "crates/tl-diagnostic" }
tl-lexer = { path = "crates/tl-lexer" }
tl-parser = { path = "crates/tl-parser" }
tl-span = { path = "crates/tl-span" }
unicode-xid = { version = "0.2" }
